# thesis_code

./: Baxter_example1.py  CMakeLists.txt  Robinson_Code_Git_Pull.bash  Robinson_Code_Git_Push.bash  package.xml  transform.py
Code/: AdjointOfg.py  AxisAngle_to_Rot.py  BaxterArm.py  DualNumber.py  DualQuaternion.py  DualVector.py  Quat_to_Rot.py  Quaternion.py  Rot_to_AxisAngle.py  Rot_to_Quat.py  SpatialManipJac.py  g_to_dual_quat.py  get_g_list.py  inv_of_g.py  jacobian_sp_to_an.py  main.py  manipdkin.py  mult_range.py  skew.py  twist.py
csv_files/: baxter_to_handle.csv
scripts/: joint_controller_test.py  robinson_joint_control_ex1.py
scripts/Final Project/: Final_Project_Motion_Planner.py  ManDKin_Test_Baxter.py  Motion_Planner.py  Quat_Math.py
scripts/Final_Project/: Final_Project_Motion_Planner.py  Motion_Planner.py  manipdkin_specified_point.py  motion_planner_test.py
scripts/Mec559/: hw2.py
scripts/baxter_sim/: plot_sim.py
scripts/motion_planner/: baxter.py  csv_writer.py  motion_iterator.py  motion_planner_class.py  motion_planner_test1.py  quat_math.py  test.py
src/: a.out  cpp_test.cpp  listener.cpp  talker.cpp  transformation.h
src/dynamics/: .main.cpp.swp  Baxter.h  Motion_Planner.h  Panda.h  Scarra.h  Three_link.h  controller.h  dynamics.h  linalg.h  main.cpp  manip.h  mass_matrix.h  mass_matrix2.h  mass_matrix3.h  quat_math.h  scarra_test.cpp  transformation.h
src/mass_matrix_cpp/: 2R_test.cpp  2r  Baxter.h  Motion_Planner.h  coriolis_matrix.cpp  dynamics.h  linalg.h  main  main.cpp  mass_matrix.h  mass_matrix2.h  mass_pos_def_test.cpp  (+6 more)
(+33 files in other folders)
